# Generated by Django 6.0.4 on 2026-08-04 04:34

import django.contrib.auth.models
import django.contrib.auth.validators
import django.core.validators
import django.db.models.deletion
import django.utils.timezone
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='MasterSpecialtyCategory',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('category_name', models.CharField(blank=True, max_length=100, null=True)),
                ('category_code', models.CharField(blank=True, max_length=20, null=True)),
                ('category_description', models.TextField(blank=True, null=True)),
                ('display_order', models.IntegerField(default=0)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Doctor Specialty Category',
                'verbose_name_plural': 'Doctor Specialty Categories',
                'ordering': ['display_order', 'category_name'],
            },
        ),
        migrations.CreateModel(
            name='MasterSpecifier',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('specifier_name', models.CharField(help_text="Name of the specifier (e.g., 'With languange impairment ')", max_length=150, unique=True)),
                ('specifier_category', models.CharField(help_text='Category: Languange, Intellectual, Medical, Behavioral, etc.', max_length=100)),
                ('is_positive_specifier', models.BooleanField(default=True, help_text="TRUE = 'with' (positive), FALSE = 'without' (negative)")),
                ('dsm_code', models.CharField(blank=True, help_text="DSM-5 reference code (e.g., 'DSM-5-01')", max_length=20, null=True)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Master Specifier',
                'verbose_name_plural': 'Master Specifiers',
                'ordering': ['specifier_category', 'specifier_name'],
            },
        ),
        migrations.CreateModel(
            name='UnmatchedMessage',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('date', models.DateField()),
                ('time', models.TimeField()),
                ('username', models.CharField(max_length=200)),
                ('message', models.TextField()),
                ('uploaded_at', models.DateTimeField(auto_now_add=True)),
                ('upload_batch', models.CharField(blank=True, max_length=100, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Unmatched Message',
                'verbose_name_plural': 'Unmatched Messages',
                'ordering': ['-date', '-time'],
            },
        ),
        migrations.CreateModel(
            name='MasterSpecialty',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('specialty_name', models.CharField(blank=True, max_length=100, null=True)),
                ('specialty_code', models.CharField(blank=True, max_length=20, null=True)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('category', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.PROTECT, related_name='specialties', to='chat_analyzer.masterspecialtycategory')),
            ],
            options={
                'verbose_name': 'Doctor Specialty',
                'verbose_name_plural': 'Doctor Specialties',
                'ordering': ['specialty_name'],
            },
        ),
        migrations.CreateModel(
            name='User',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('username', models.CharField(error_messages={'unique': 'A user with that username already exists.'}, help_text='Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.', max_length=150, unique=True, validators=[django.contrib.auth.validators.UnicodeUsernameValidator()], verbose_name='username')),
                ('first_name', models.CharField(blank=True, max_length=150, verbose_name='first name')),
                ('last_name', models.CharField(blank=True, max_length=150, verbose_name='last name')),
                ('email', models.EmailField(blank=True, max_length=254, verbose_name='email address')),
                ('is_staff', models.BooleanField(default=False, help_text='Designates whether the user can log into this admin site.', verbose_name='staff status')),
                ('is_active', models.BooleanField(default=True, help_text='Designates whether this user should be treated as active. Unselect this instead of deleting accounts.', verbose_name='active')),
                ('date_joined', models.DateTimeField(default=django.utils.timezone.now, verbose_name='date joined')),
                ('role', models.CharField(choices=[('admin', 'Admin'), ('therapist', 'Therapist'), ('doctor', 'Doctor'), ('client', 'Client')], default='client', help_text="User's roles in the system", max_length=20)),
                ('phone', models.CharField(blank=True, help_text='Enter without spaces (e.g., 0123456789 or +60123456789)', max_length=20, null=True, validators=[django.core.validators.RegexValidator(message='phone number must be entered in Malaysian format: 0123456789 or +60123456789', regex='^(\\+?60|0)[1-9][0-9]{7,9}$')])),
                ('date_of_birth', models.DateField(blank=True, help_text='Date of Birth', null=True)),
                ('gender', models.CharField(blank=True, choices=[('male', 'Male'), ('female', 'Female'), ('other', 'Other')], help_text='Gender Identity', max_length=20, null=True)),
                ('address', models.TextField(blank=True, help_text='Home address', null=True)),
                ('license_number', models.CharField(blank=True, help_text='professional license number for doctor and therapist', max_length=255, null=True, unique=True)),
                ('license_state', models.CharField(blank=True, help_text='State where license is issued', max_length=255, null=True)),
                ('years_of_experience', models.IntegerField(blank=True, help_text='Years of professional experience', null=True)),
                ('hire_date', models.DateField(blank=True, help_text='Date of hire', null=True)),
                ('specialization', models.CharField(blank=True, help_text='Primary specialization', max_length=200)),
                ('client_status', models.CharField(blank=True, choices=[('active', 'Active'), ('inactive', 'Inactive'), ('pending', 'Pending')], default='pending', help_text="Client's status (only for clients fields)", max_length=20, null=True)),
                ('last_visit', models.DateTimeField(blank=True, help_text='Date of last visit (only for clients)', null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('assigned_therapist', models.ForeignKey(blank=True, help_text='Therapist assigned to this client', limit_choices_to={'role': 'therapist'}, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='assigned_clients', to='chat_analyzer.user')),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to.', related_name='chat_analyzer_user_set', to='auth.group', verbose_name='groups')),
                ('registered_by', models.ForeignKey(blank=True, help_text='Admin who registered this user', limit_choices_to={'role': 'admin'}, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='registered_users', to='chat_analyzer.user')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='chat_analyzer_user_set', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'User',
                'verbose_name_plural': 'Users',
                'ordering': ['last_name', 'first_name'],
                'permissions': [('can_generate_invite_code', 'Can generate admin invite codes'), ('can_revoke_invite_code', 'Can revoke admin invite codes'), ('can_manage_therapist', 'Can manage therapist'), ('can_manage_doctors', 'Can manage doctors'), ('can_manage_clients', 'Can manage clients'), ('can_approve_documents', 'Can approve documents')],
            },
            managers=[
                ('objects', django.contrib.auth.models.UserManager()),
            ],
        ),
        migrations.CreateModel(
            name='UploadHistory',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('file_name', models.CharField(max_length=255)),
                ('batch_id', models.CharField(blank=True, db_index=True, max_length=100, null=True, unique=True)),
                ('message_count', models.IntegerField(default=0)),
                ('matched_count', models.IntegerField(default=0)),
                ('unmatched_count', models.IntegerField(default=0)),
                ('status', models.CharField(choices=[('success', 'Success'), ('partial', 'Partial'), ('failed', 'Failed')], default='success', max_length=20)),
                ('uploaded_at', models.DateTimeField(auto_now_add=True)),
                ('positive_count', models.IntegerField(default=0)),
                ('negative_count', models.IntegerField(default=0)),
                ('neutral_count', models.IntegerField(default=0)),
                ('admin', models.ForeignKey(limit_choices_to={'role': 'admin'}, on_delete=django.db.models.deletion.CASCADE, related_name='uploads', to='chat_analyzer.user')),
            ],
            options={
                'verbose_name': 'Upload History',
                'verbose_name_plural': 'Upload Histories',
                'ordering': ['-uploaded_at'],
            },
        ),
        migrations.CreateModel(
            name='Conversation',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('date', models.DateField(help_text='Date of message from whatsapp')),
                ('time', models.TimeField(help_text='Time of the message from whatsapp')),
                ('username', models.CharField(help_text='original sender name/ number from whatsapp', max_length=200)),
                ('message', models.TextField(help_text='original message text')),
                ('cleaned_text', models.TextField(blank=True, help_text='cleaned version (after preprocessing)', null=True)),
                ('sentiment', models.CharField(blank=True, choices=[('positive', 'Positive'), ('negative', 'Negative'), ('neutral', 'Neutral')], help_text='sentiment analysis result', max_length=20, null=True)),
                ('uploaded_at', models.DateTimeField(auto_now_add=True, help_text='when this was imported')),
                ('upload_batch', models.CharField(blank=True, help_text='Batch ID for grouping uploads', max_length=100, null=True)),
                ('client', models.ForeignKey(help_text='the client this conversation belongs to', limit_choices_to={'role': 'client'}, on_delete=django.db.models.deletion.CASCADE, related_name='conversations', to='chat_analyzer.user')),
            ],
            options={
                'verbose_name': 'Conversation',
                'verbose_name_plural': 'Conversations',
                'ordering': ['-date', '-time'],
            },
        ),
        migrations.CreateModel(
            name='ClientContact',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('contact_type', models.CharField(choices=[('father', 'Father'), ('mother', 'Mother'), ('guardian', 'Guardian'), ('other', 'Other')], help_text='Type of contact such as (father, mother, guardian)', max_length=20)),
                ('name', models.CharField(help_text='Full name of the contact', max_length=200)),
                ('phone_number', models.CharField(help_text='Contact phone number', max_length=20)),
                ('is_primary', models.BooleanField(default=False, help_text='is this primary contact')),
                ('notes', models.TextField(blank=True, help_text='Additional notes about this contact', null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('client', models.ForeignKey(help_text='The client this contacts belongs to', limit_choices_to={'role': 'client'}, on_delete=django.db.models.deletion.CASCADE, related_name='contacts', to='chat_analyzer.user')),
            ],
            options={
                'verbose_name': 'Client Contact',
                'verbose_name_plural': 'Client Contacts 📇',
                'ordering': ['-is_primary', 'contact_type'],
            },
        ),
        migrations.CreateModel(
            name='AutismDiagnosis',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('support_level', models.IntegerField(choices=[(1, 'Level 1 - Requiring Support'), (2, 'Level 2 - Requiring Substantial Support'), (3, 'Level 3 - Requiring Very Substantial Support')], help_text='DSM-5 support level (1,2, or 3)')),
                ('diagnosis_date', models.DateField(help_text='date of diagnosis')),
                ('is_active', models.BooleanField(default=True, help_text='Is this the active diagnosis')),
                ('clinical_notes', models.TextField(blank=True, help_text='additional clinical notes', null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('client', models.ForeignKey(help_text='The client with this diagnosis', limit_choices_to={'role': 'client'}, on_delete=django.db.models.deletion.CASCADE, related_name='autism_diagnoses', to='chat_analyzer.user')),
                ('diagnosed_by', models.ForeignKey(blank=True, help_text='The doctor who made the diagnosis', limit_choices_to={'role': 'doctor'}, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='diagnoses_made', to='chat_analyzer.user')),
            ],
            options={
                'verbose_name': 'Autism Diagnosis',
                'verbose_name_plural': 'Autism Diagnoses 💊',
                'ordering': ['-diagnosis_date'],
            },
        ),
        migrations.CreateModel(
            name='AdminInviteCode',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('code', models.CharField(db_index=True, help_text='The invitation code', max_length=100, unique=True)),
                ('expires_at', models.DateTimeField(help_text='When this code expires')),
                ('used_at', models.DateTimeField(blank=True, help_text='When this code was used', null=True)),
                ('purpose', models.CharField(choices=[('admin_registeration', 'Admin Registeration'), ('therapist_invite', 'Therapist Invite'), ('doctor_invite', 'Doctor Invite')], default='admin_registeration', max_length=50)),
                ('notes', models.TextField(blank=True, null=True)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('update_at', models.DateTimeField(auto_now=True)),
                ('created_by', models.ForeignKey(blank=True, help_text='Who created this invite', limit_choices_to={'role': 'admin'}, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='created_invites', to='chat_analyzer.user')),
                ('used_by', models.ForeignKey(blank=True, help_text='who used this code', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='used_invites', to='chat_analyzer.user')),
            ],
            options={
                'verbose_name': 'Admin Invite Code',
                'verbose_name_plural': 'Admin Invite Codes',
                'ordering': ['created_at'],
            },
        ),
        migrations.CreateModel(
            name='DoctorSpecialty',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('is_board_certified', models.BooleanField(default=False)),
                ('certification_date', models.DateField(blank=True, null=True)),
                ('certification_expires', models.DateField(blank=True, null=True)),
                ('is_primary_specialty', models.BooleanField(default=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('specialty', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='doctor_specialties', to='chat_analyzer.masterspecialty')),
                ('doctor', models.ForeignKey(limit_choices_to={'role': 'doctor'}, on_delete=django.db.models.deletion.CASCADE, related_name='doctor_specialties', to='chat_analyzer.user')),
            ],
            options={
                'verbose_name': 'Doctor Specialty',
                'verbose_name_plural': 'Doctor specialties',
                'unique_together': {('doctor', 'specialty')},
            },
        ),
        migrations.CreateModel(
            name='ClientSpecifier',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('severity', models.CharField(blank=True, choices=[('mild', 'Mild'), ('moderate', 'Moderate'), ('severe', 'Severe'), ('n/a', 'N/A')], help_text='severity level', max_length=20, null=True)),
                ('is_present', models.BooleanField(default=True, help_text='True if client has this specifier, false if client does not have it')),
                ('clinical_notes', models.TextField(blank=True, help_text='clinical description of how this specifier presents', null=True)),
                ('stated_date', models.DateField(blank=True, help_text='When this specifier was stated', null=True)),
                ('is_pending_approval', models.BooleanField(default=False, help_text='Is this specifier waiting for approval')),
                ('is_approved', models.BooleanField(default=False, help_text='if dr. directly state this it is already approved but by default it is False until dr. approve ')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('autism_diagnosis', models.ForeignKey(help_text='the autism diagnosis this specifier belongs to', on_delete=django.db.models.deletion.CASCADE, related_name='specifiers', to='chat_analyzer.autismdiagnosis')),
                ('specifier', models.ForeignKey(help_text='The specifier from the master list', on_delete=django.db.models.deletion.PROTECT, related_name='client_specifiers', to='chat_analyzer.masterspecifier')),
                ('approved_by', models.ForeignKey(blank=True, help_text='Clinician who approved this specifier', limit_choices_to={'role': 'doctor'}, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='approved_specifiers', to='chat_analyzer.user')),
                ('proposed_by', models.ForeignKey(blank=True, help_text='Therapist who proposed this specifier', limit_choices_to={'role': 'therapist'}, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='proposed_specifiers', to='chat_analyzer.user')),
                ('stated_by', models.ForeignKey(blank=True, help_text='clinician who stated this specifier', limit_choices_to={'role': 'doctor'}, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='stated_specifiers', to='chat_analyzer.user')),
            ],
            options={
                'verbose_name': 'Client Specifier',
                'verbose_name_plural': 'Client Specifiers',
                'ordering': ['-is_present', 'specifier__specifier_category'],
                'unique_together': {('autism_diagnosis', 'specifier')},
            },
        ),
    ]
