# Generated by Django 6.0.4 on 2026-08-05 16:24

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('chat_analyzer', '0001_initial'),
    ]

    operations = [
        migrations.AlterModelOptions(
            name='admininvitecode',
            options={'ordering': ['created_at'], 'verbose_name': 'Admin Invite Code', 'verbose_name_plural': 'Admin Invite Codes 🧑🏽\u200d💻 '},
        ),
        migrations.AlterModelOptions(
            name='conversation',
            options={'ordering': ['-date', '-time'], 'verbose_name': 'Conversation', 'verbose_name_plural': 'Conversations 💬 '},
        ),
        migrations.AlterModelOptions(
            name='doctorspecialty',
            options={'verbose_name': 'Doctor Specialty', 'verbose_name_plural': 'Each Doctor Specialties 🥼'},
        ),
        migrations.AlterModelOptions(
            name='masterspecialty',
            options={'ordering': ['specialty_name'], 'verbose_name': 'Doctor Specialty', 'verbose_name_plural': 'All Doctor Specialties Available 🩺 '},
        ),
        migrations.AlterModelOptions(
            name='unmatchedmessage',
            options={'ordering': ['-date', '-time'], 'verbose_name': 'Unmatched Message', 'verbose_name_plural': 'Unmatched Messages ❌ '},
        ),
        migrations.AlterModelOptions(
            name='uploadhistory',
            options={'ordering': ['-uploaded_at'], 'verbose_name': 'Upload History', 'verbose_name_plural': 'Upload Histories 📅 '},
        ),
        migrations.CreateModel(
            name='DiagnosisDocument',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('document_type', models.CharField(choices=[('diagnostic_report', 'Diagnostic Report'), ('psychological_eval', 'Psychological Evaluation'), ('medical_history', 'Medical History'), ('school_report', 'School Report'), ('therapy_notes', 'Therapy Notes'), ('other', 'Other')], default='diagnostic_report', help_text='Type of document', max_length=50)),
                ('file_name', models.CharField(help_text='Original file name', max_length=255)),
                ('file_path', models.CharField(help_text='Cloud/S3 path or server path', max_length=500)),
                ('file_size', models.IntegerField(blank=True, help_text='Size in KB', null=True)),
                ('upload_date', models.DateTimeField(auto_now_add=True)),
                ('is_approved', models.BooleanField(default=False, help_text='Has this document been approved')),
                ('approval_date', models.DateTimeField(blank=True, help_text='When the document was approved', null=True)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('approved_by', models.ForeignKey(blank=True, help_text='Doctor who approved this document', limit_choices_to={'role': 'doctor'}, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='approved_documents', to=settings.AUTH_USER_MODEL)),
                ('client', models.ForeignKey(help_text='The client this document belongs to ', limit_choices_to={'role': 'client'}, on_delete=django.db.models.deletion.CASCADE, related_name='diagnosis_documents', to=settings.AUTH_USER_MODEL)),
                ('uploaded_by', models.ForeignKey(blank=True, help_text='Who uloaded this documents', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='uploaded_documents', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': ('Diagnosis Document',),
                'verbose_name_plural': ('Diagnosis Documents',),
                'ordering': ['-upload_date'],
            },
        ),
    ]
